<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HjemFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#03A9F4"
        android:paddingTop="20dp"
        android:text="@string/hjem_frag"
        android:textAlignment="center"
        android:textSize="34sp"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <Button
            android:id="@+id/btnOn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/on"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnOff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/off"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/devices" />
    </LinearLayout>

</FrameLayout>